# Bupper_Testing_Ground

./: .replit  app.py  circuit_visualization.py  classical_solver.py  example.py  hybrid_optimizer.py  optimization.py  pyproject.toml  qaoa_core.py  qiskit_qaoa.py  quantum_route.html  qubo_formulation.py  replit.nix  route_map_pennylane_hybrid_3cities.html  route_map_pennylane_hybrid_4cities.html  route_map_pennylane_hybrid_5cities.html  route_map_pennylane_pure_3cities.html  route_map_pennylane_pure_4cities.html  route_map_pennylane_pure_5cities.html  route_map_qiskit_hybrid_3cities.html  route_map_qiskit_hybrid_4cities.html  route_map_qiskit_hybrid_5cities.html  route_map_qiskit_pure_3cities.html  route_map_qiskit_pure_4cities.html  route_map_qiskit_pure_5cities.html  serve_map.py  street_network.py  test_pathfinding.py  test_qaoa.py  utils.py
static/: quantum_route.html  route_map_pennylane_hybrid_3cities.html  route_map_pennylane_pure_3cities.html  route_map_pennylane_pure_4cities.html  route_map_qiskit_hybrid_3cities.html  route_map_qiskit_pure_3cities.html  route_map_qiskit_pure_4cities.html
static/route_maps/: route_map_46a1403e.html  route_map_7605070d.html  route_map_a0cf2b7a.html  route_qiskit_pure.html  route_qiskit_pure_1739817626.html  route_qiskit_pure_1739818192.html
templates/: dashboard.html  index.html
