[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.0.2",
    "pennylane-lightning>=0.40.0",
    "pennylane>=0.40.0",
    "pennylane-qiskit>=0.40.0",
    "qiskit>=1.2.4",
]
