[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.0.2",
    "pennylane-lightning>=0.40.0",
    "pennylane>=0.40.0",
    "pennylane-qiskit>=0.40.0",
    "qiskit>=1.2.4",
    "trafilatura>=2.0.0",
    "scipy>=1.15.1",
    "qiskit-aer>=0.16.1",
    "qiskit-algorithms>=0.3.1",
    "qiskit-optimization>=0.6.1",
    "osmnx>=1.3.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "shapely>=2.0.7",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "psutil>=7.0.0",
    "polyline>=2.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "openai>=1.63.2",
    "flask-socketio>=5.5.1",
    "python-socketio>=5.12.1",
    "python-engineio>=4.11.2",
    "simple-websocket>=1.1.0",
    "anthropic>=0.45.2",
]
